# statistics-backend

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
statistics_backend/: __init__.py  backend.py  energy.py  energy_utils.py  rainfall.py  rainfall_utils.py  temperature.py  temperature_utils.py
