[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "statistics-backend"
version = "0.0.0"
description = "Utilities for retreiving data from InfluxDB for presentation to Grafana."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/statistics-backend"
"Issue Tracker" = "https://github.com/domdfcoding/statistics-backend/issues"
"Source Code" = "https://github.com/domdfcoding/statistics-backend"

[tool.whey]
base-classifiers = []
python-versions = [ "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "statistics_backend"

[tool.importcheck]
always = [
    "statistics_backend.__init__",
    "statistics_backend.backend",
    "statistics_backend.energy",
    "statistics_backend.rainfall",
    "statistics_backend.temperature",
]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "astral"
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_errors = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
